--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,9 @@ body {
 #app input[type="text"]{
     padding: 3px;
 }
+
+.command {
+    font-size: 12px;
+    cursor: pointer;
+    color: lightskyblue;
+}
